--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/fav.png">
+    <script src="https://kit.fontawesome.com/b3c07523a4.js" crossorigin="anonymous"></script>
+    <title>Docmed</title>
 </head>
 <body>
-    
+    <div class="header">
+<div class="icons">
+<i class="fab fa-linkedin-in"></i>
+<i class="fab fa-facebook-f"></i>
+<i class="fab fa-google-plus-g"></i>
+</div>
+
+<div class="margin">
+    <ul >
+        <li class="email">
+            <i class=" fas fa-envelope"></i>
+            docmed@gmail.com
+        </li>
+
+        <li class="num">
+            <i class=" fas fa-phone-alt"></i>
+            1625879
+        </li>
+    </ul>
+</div>
+
+    </div>
 </body>
 </html>
