--- a/index.html
+++ b/index.html
@@ -32,5 +32,37 @@
 </div>
 
     </div>
+
+
+<div class="headlogo">
+    <div>
+        <img class="icon" src="img/icon.webp" alt="icon">
+    </div>
+    
+<div>
+    <ul class="flex">
+        <li>home</li>
+        <li>home</li>
+        <li>home</li>
+        <ul>
+            <li>home</li>
+            <li>home</li>
+        </ul>
+        <li>home</li>
+        <li>home</li>
+        <ul>
+            <li>home</li>
+            <li>home</li>
+        </ul>
+        <li>home</li>
+        <li>home</li>
+    </ul>
+</div>
+</div>
+<div class="bg-img">
+    <h1>
+        Health Care
+    </h1>
+</div>
 </body>
 </html>
